--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ jobs:
       
       - run: ./gradlew check
       - run: ./gradlew jacocoTestReport
-      - run: bash <(curl -s https://codecov.io.bash)
+      - run: bash <(curl -s https://codecov.io/bash)
       
       
